# supremacy_ai

./: __init__.py  pyproject.toml
src/supremacy_ai/: __init__.py  barebones_ai.py  config.toml  simple_ai.py
